--- a/astro/package.json
+++ b/astro/package.json
@@ -10,10 +10,11 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/check": "^0.4.1",
     "@astrojs/starlight": "^0.17.2",
+    "@xapi/xapi": "^2.2.5",
     "astro": "^4.2.1",
     "sharp": "^0.32.5",
-    "@astrojs/check": "^0.4.1",
     "typescript": "^5.3.3"
   }
 }
