--- a/proxy/.env.example
+++ b/proxy/.env.example
@@ -1,5 +1,6 @@
-API_KEY=your_upstream_service_api_key
-UPSTREAM_URL=https://api.your-backend.com
-CORS_ORIGIN=https://your-frontend-app.com
+XAPI_KEY=my_key
+XAPI_SECRET=my_secret
+XAPI_ENDPOINT=http://localhost:8080/xapi/statements
+CORS_ORIGIN=https://localhost
 SSL_KEY_PATH=/usr/src/app/certs/privkey.pem
 SSL_CERT_PATH=/usr/src/app/certs/fullchain.pem
